--- a/css/estilo.css
+++ b/css/estilo.css
@@ -31,6 +31,7 @@ header h1{
     margin-bottom: 30px;
     color: white;
     text-transform: none;
+    font-size: 1.5rem;
     
 }
  body ul li{
@@ -46,8 +47,11 @@ li a{
     text-align: center;
     font-family: 'PT Sans', sans-serif;
     color: white;
+    font-size: 1rem;
 }
-
+.nav-link active{
+    font-size: 1rem;
+}
 
 div{
     background-color: bisque;
@@ -133,25 +137,14 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.imagen1{
-    width: 110px;
-    height: 100px;
-   
-}  
-@keyframes imagen1{
 
 
-0% {
-    width:200px;
+
+
+.car-img-top{
+    width: 50px;
 }
 
-50% {
-    width: 250 px;
-}
-
-100% {width: 260px;
-}
-}
 
 .animacion{
     animation-name: imagen1;
